# tad

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
completions/: _tad  tad.bash
docs/: CLAUDE-CODE.md  MIGRATING.md  RELEASING.md  SCREENSHOTS.md
docs/demo/: dashboard.tape  groups.yaml  render-themes.sh  setup.sh
examples/: config.yaml.example  groups.yaml.example
packaging/aur/: .gitignore
packaging/aur/tad-bin/: .SRCINFO  PKGBUILD
packaging/aur/tmux-tad/: .SRCINFO  PKGBUILD
packaging/aur/tmux-tad-bin/: .SRCINFO  PKGBUILD
packaging/homebrew/: tad.rb
src/: agents.rs  cli.rs  config.rs  dashboard.rs  discovery.rs  doctor.rs  groups.rs  install.rs  main.rs  notify.rs  proc_util.rs  projects.rs  provider.rs  sessions.rs  shell.rs  snooze.rs  theme.rs  tmux.rs  tmux_conf.rs  tmux_keybind.rs  transcript.rs  ui_config.rs  watch.rs  wizard.rs
src/dashboard/: action.rs  dispatch.rs  format.rs  grid.rs  hit.rs  keys.rs  modal.rs  mouse.rs  picker.rs  preview.rs  render.rs  rows.rs
src/wizard/: discovery.rs  ui.rs
tests/fixtures/wizard/: known_hosts.txt  shell_history_bash.txt  shell_history_fish.txt  ssh_config.txt
