[package]
name = "tad"
version = "0.1.0"
edition = "2021"
authors = ["ttpears <ttpears@gmail.com>"]
description = "Tmux session/group manager with fzf-powered dashboard"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1"
dirs = "5"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
