[package]
name = "tad"
version = "0.6.0"
edition = "2021"
authors = ["ttpears <ttpears@gmail.com>"]
description = "Tmux session/group manager with native TUI dashboard"
license = "MIT"
repository = "https://github.com/ttpears/tad"
homepage = "https://github.com/ttpears/tad"
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1"
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
owo-colors = "4"
inquire = "0.7"
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
